--- a/Twitter.ipynb
+++ b/Twitter.ipynb
@@ -26,26 +26,29 @@
         "import tweepy\n",
         "import re\n",
         "\n",
-        "def search_for_hashtags(consumer_key, consumer_secret, access_token, access_token_secret, hashtag_phrase):\n",
+        "def search_for_hashtags(consumer_key, consumer_secret, access_token, access_token_secret, hashtag_phrase, tweet_num):\n",
         " \n",
         "    auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
         "    auth.set_access_token(access_token, access_token_secret)\n",
         "    api = tweepy.API(auth)\n",
-        "    place_id = api.geo_search(query=\"IN\", granularity=\"country\")[0].id\n",
+        "#    places = api.geo_search(query=\"IN\", granularity=\"country\")\n",
+        "#    place_id = places[0].id\n",
         "    \n",
-        "    fname = '_'.join(re.findall(r\"#(\\w+)\", hashtag_phrase))\n",
-        "\n",
+        "    fname = re.sub(' AND ' , '_' , hashtag_phrase )\n",
         "    with open('%s.csv' % (fname), 'w', newline='') as file:\n",
         "\n",
         "        w = csv.writer(file)\n",
         "        w.writerow(['Time', 'Tweets', 'All_hashtags', 'Place'])\n",
         "\n",
-        "        for tweet in tweepy.Cursor(api.search, q=hashtag_phrase+' -filter:retweets'+' place:'+place_id,\n",
-        "                                   lang=\"en\", tweet_mode='extended', since='2020-06-29').items(20):\n",
+        "        for tweet in tweepy.Cursor(api.search, q=hashtag_phrase+' -filter:retweets',\n",
+        "                                   lang=\"en\", tweet_mode='extended').items(tweet_num):\n",
         "            w.writerow([tweet.created_at, tweet.full_text.replace('\\n',' ').encode('utf-8'),\n",
-        "                       [e['text'] for e in tweet._json['entities']['hashtags']], tweet.place.name ])"
+        "                       [e['text'] for e in tweet._json['entities']['hashtags']], tweet.place ])\n",
+        "            \n",
+        "# For GeoLocation : +' place : '+place_id\n",
+        "# For getting place of tweet :  .name"
       ],
-      "execution_count": 82,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -60,12 +63,13 @@
         "consumer_secret = 'arnqdTdhmypGkAvtfEwDMV5wOU3cDhEOsI1J4TWCfyEUUMgXBC'\n",
         "access_token = '754676975826931713-Nwh9kwEaGg5fzFVsz6uHhlcfnK7gaH4'\n",
         "access_token_secret = 'tD6wsYgKm88wVA2dQce23rnDiLc5s8WASLPI8SybJXdLU'\n",
-        "hashtag_phrase = '#COVID-19'\n",
+        "hashtag_phrase = 'gaumutra AND corona AND cure'\n",
+        "tweet_num = 500\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    search_for_hashtags(consumer_key, consumer_secret, access_token, access_token_secret, hashtag_phrase)"
+        "    search_for_hashtags(consumer_key, consumer_secret, access_token, access_token_secret, hashtag_phrase, tweet_num)"
       ],
-      "execution_count": 83,
+      "execution_count": 143,
       "outputs": []
     }
   ]
